fix remove the whitespacing in right side

--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -9,6 +9,9 @@ comment-component {
         width: 100%;
         max-width: $lg_breakpoint;
         display: block;
+        .row {
+            margin:0;
+        }
         .comment-content {
             padding: 2em;
         }
