--- a/src/components/curriculum/curriculum.scss
+++ b/src/components/curriculum/curriculum.scss
@@ -16,7 +16,8 @@ curriculum-component {
             padding: 0.5rem 2.8125rem 0.8125rem;
             color: #334353;
             font-size: 2.1875em;
-            width: 425px;
+            max-width: 425px;
+            width: 100%;
             border-radius: 0.3125rem;
             background-color: rgba(255,255,255,.75);
         }
