--- a/src/components/payment/payment.scss
+++ b/src/components/payment/payment.scss
@@ -148,7 +148,7 @@ payment-component {
             padding-top: 1em;
             padding-bottom: 1em;
             .row {
-                
+                margin: 0;
                 .pay-buttons {
                     display: inline-block;
                     padding: .7em;
